third_party/move/move-compiler-v2/tests/more-v1/parser/num_literal_underscore_leading.move
module 0x42::M {
    fun t() {
        // Leading underscore not allowed
        let _ = _0u8;
    }
}
